# lcd-odroid

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  codecov.yml  config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  rust.yml
contrib/bitcoind/: bitcoin.conf  bitcoind.service
src/: bitcoin.rs  consensus.rs  execution.rs  hardware.rs  lib.rs  main.rs
src/runner/: bitcoin.rs  consensus.rs  execution.rs  hostname.rs  mod.rs
