# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 l5y

[package]
name = "lcd-odroid"
version = "0.1.0"
edition = "2024"

[dependencies]
hd44780-driver = "0.4"
linux-embedded-hal = "0.3"
ureq = { version = "2", default-features = false, features = ["json"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
