# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 l5y

[package]
name = "lcd-odroid"
version = "0.1.0"
edition = "2024"

[dependencies]
hd44780-driver = "0.4"
linux-embedded-hal = "0.4"
# hd44780-driver 0.4 still requires embedded-hal 0.2 traits, while
# linux-embedded-hal 0.4 only implements embedded-hal 1.0. Both majors are
# pulled in so a thin adapter in `main.rs` can bridge the two.
embedded-hal = "1.0"
embedded-hal-1 = { package = "embedded-hal", version = "1" }
ureq = { version = "3", default-features = false, features = ["json"] }
base64 = { version = "0.22", default-features = false }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }
toml = "1.1"
